--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
   </distributionManagement>
 
   <dependencies>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.12</version>
+    </dependency>
   </dependencies>
 
 </project>
