--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
     	<artifactId>junit</artifactId>
     	<version>4.12</version>
     </dependency>
+    <dependency>
+    	<groupId>com.intellij</groupId>
+    	<artifactId>annotations</artifactId>
+    	<version>12.0</version>
+    </dependency>
   </dependencies>
 
 </project>
