--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
     	<artifactId>annotations</artifactId>
     	<version>12.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpclient</artifactId>
+    	<version>4.5.1</version>
+    </dependency>
   </dependencies>
 
 </project>
