--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
     	<artifactId>httpclient</artifactId>
     	<version>4.5.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-lang3</artifactId>
+    	<version>3.4</version>
+    </dependency>
   </dependencies>
 
 </project>
