--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
       <version>3.4</version>
     </dependency>
     <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-collections4</artifactId>
+    	<version>4.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.glassfish.jaxb</groupId>
       <artifactId>txw2</artifactId>
       <version>2.2.11</version>
