--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
     	<version>4.0</version>
     </dependency>
     <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.glassfish.jaxb</groupId>
       <artifactId>txw2</artifactId>
       <version>2.2.11</version>
