--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,16 @@
     	<artifactId>xercesImpl</artifactId>
     	<version>2.11.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.javalite</groupId>
+        <artifactId>activejdbc</artifactId>
+        <version>1.4.11</version>
+    </dependency>
+    <dependency>
+        <groupId>jacz.storage</groupId>
+        <artifactId>activejdbc-controller</artifactId>
+        <version>0.1a</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
