--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,15 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.intellij</groupId>-->
+      <!--<artifactId>annotations</artifactId>-->
+      <!--<version>12.0</version>-->
+    <!--</dependency>-->
     <dependency>
-      <groupId>com.intellij</groupId>
-      <artifactId>annotations</artifactId>
-      <version>12.0</version>
+      <groupId>org.checkerframework</groupId>
+      <artifactId>checker</artifactId>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
