--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
       <!--<artifactId>annotations</artifactId>-->
       <!--<version>12.0</version>-->
     <!--</dependency>-->
-    <dependency>
-      <groupId>org.checkerframework</groupId>
-      <artifactId>checker</artifactId>
-      <version>2.0.0</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.checkerframework</groupId>-->
+      <!--<artifactId>checker</artifactId>-->
+      <!--<version>2.0.0</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
