--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
   <name>jacuzzi</name>
   <url>https://github.com/albertoanguita/jacuzzi</url>
 
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -99,11 +107,6 @@
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-collections4</artifactId>
     	<version>4.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>txw2</artifactId>
-      <version>2.2.11</version>
     </dependency>
     <dependency>
       <groupId>net.sf.saxon</groupId>
