--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.checkerframework</groupId>
-      <artifactId>checker</artifactId>
-      <version>2.0.0</version>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>15.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
