--- a/pom.xml
+++ b/pom.xml
@@ -110,11 +110,11 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.1</version>
     </dependency>
-    <dependency>
-    	<groupId>org.apache.commons</groupId>
-    	<artifactId>commons-collections4</artifactId>
-    	<version>4.1</version>
-    </dependency>
+    <!--<dependency>-->
+    	<!--<groupId>org.apache.commons</groupId>-->
+    	<!--<artifactId>commons-collections4</artifactId>-->
+    	<!--<version>4.1</version>-->
+    <!--</dependency>-->
     <dependency>
         <groupId>org.javalite</groupId>
         <artifactId>activejdbc</artifactId>
