--- a/jacuzziannotations/pom.xml
+++ b/jacuzziannotations/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>jacuzzi</artifactId>
-        <groupId>org.aanguita</groupId>
+        <groupId>com.github.albertoanguita</groupId>
         <version>0.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
