--- a/jacuzziannotations/pom.xml
+++ b/jacuzziannotations/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>jacuzzi-annotations</artifactId>
     <name>Jacuzzi - Annotations</name>
+    <description>A generic java utilities collection project - extended functionality with aspectj dependency</description>
 
 
 </project>
