--- a/jacuzzidatabase/pom.xml
+++ b/jacuzzidatabase/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-core</artifactId>
-            <version>0.2.0</version>
+            <version>0.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.javalite</groupId>
