--- a/jacuzzifull/pom.xml
+++ b/jacuzzifull/pom.xml
@@ -18,17 +18,17 @@
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-core</artifactId>
-            <version>0.2.0</version>
+            <version>0.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-database</artifactId>
-            <version>0.2.0</version>
+            <version>0.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-annotations</artifactId>
-            <version>0.2.0</version>
+            <version>0.2.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
