Set version to 0.2.1

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.albertoanguita</groupId>
   <artifactId>jacuzzi</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>${version}</version>
   <packaging>pom</packaging>
   <modules>
     <module>jacuzzicore</module>
@@ -42,6 +42,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <version>0.2.1</version>
   </properties>
 
   <build>
