--- a/jacuzziannotations/pom.xml
+++ b/jacuzziannotations/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jacuzzi</artifactId>
         <groupId>com.github.albertoanguita</groupId>
-        <version>${version}</version>
+        <version>0.2.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
