--- a/jacuzzicore/pom.xml
+++ b/jacuzzicore/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.albertoanguita</groupId>
         <artifactId>jacuzzi</artifactId>
-        <version>${version}</version>
+        <version>0.2.2</version>
     </parent>
 
     <artifactId>jacuzzi-core</artifactId>
