--- a/jacuzzifull/pom.xml
+++ b/jacuzzifull/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jacuzzi</artifactId>
         <groupId>com.github.albertoanguita</groupId>
-        <version>${version}</version>
+        <version>0.2.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,17 +18,17 @@
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-core</artifactId>
-            <version>${version}</version>
+            <version>0.2.2</version>
         </dependency>
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-database</artifactId>
-            <version>${version}</version>
+            <version>0.2.2</version>
         </dependency>
         <dependency>
             <groupId>com.github.albertoanguita</groupId>
             <artifactId>jacuzzi-annotations</artifactId>
-            <version>${version}</version>
+            <version>0.2.2</version>
         </dependency>
     </dependencies>
 
