Do deploy children poms

--- a/jacuzziannotations/pom.xml
+++ b/jacuzziannotations/pom.xml
@@ -14,4 +14,15 @@
     <description>A generic java utilities collection project - extended functionality with aspectj dependency</description>
 
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
