Upgrade version to 0.2.6

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.albertoanguita</groupId>
   <artifactId>jacuzzi</artifactId>
-  <version>0.2.5-SNAPSHOT</version>
+  <version>0.2.6</version>
   <packaging>pom</packaging>
   <modules>
     <module>jacuzzicore</module>
@@ -108,7 +108,6 @@
         <configuration>
           <serverId>ossrh</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-          <!--<stagingProfileId>7edbe315063867</stagingProfileId>-->
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
